--- a/index.html
+++ b/index.html
@@ -79,6 +79,94 @@
                      <li> <a href="/network.html">Network & Security</a></li>
                 </ul>
             </li>
+            <li><a href="#">Health Care&nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
+                <ul>
+                    <li>
+                        <a href="#">Allans_Medical&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                    aria-hidden="true"></i></span></a>
+
+                        <ul>
+                            <li> <a href="/xray.html">X-Ray Machines</a></li>
+                            <li> <a href="/medical.html">Medical Equipments and ECP Machines</a></li>
+                            <li> <a href="/sono.html">Sonography Machines</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Adonis_Medical&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                    aria-hidden="true"></i></span></a>
+
+                        <ul>
+                            <li> <a href="#">X-Ray_Machines&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                            aria-hidden="true"></i></span></a>
+                                <ul>
+                                    <li> <a href="/Axray1.html">100ma</a></li>
+                                    <li> <a href="/Axray2.html">300ma/500ma/800ma</a></li>
+                                </ul>
+
+                            </li>
+                            <li> <a href="#">C_Arm_Machines&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                            aria-hidden="true"></i></span></a>
+                                <ul>
+                                    <li> <a href="/Axray1.html">Mobile_surgical</a></li>
+                                    <li> <a href="/Axray2.html">High_Frequency</a></li>
+                                    <li> <a href="/Axray2.html">Rotating_Anode</a></li>
+                                </ul>
+
+                            </li>
+                            <li> <a href="/flat.html">>Flat_Panel_Digital_xray</a></li>
+
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#"> Covid 19 &nbsp;&nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                    aria-hidden="true"></i></span></a>
+
+                        <ul>
+                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                            aria-hidden="true"></i></span></a>
+                                <ul>
+                                    <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
+                                    <li> <a href="/AA1.html">AA+ Covid 19 testing Solution</a></li>
+
+                                </ul>
+                            </li>
+                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                                            class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
+                                <ul>
+                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
+                                                    class="fa fa-angle-down drop-icon"
+                                                    aria-hidden="true"></i></span></a>
+                                        <ul>
+                                            <li> <a href="/self.html">Self Check</a></li>
+                                            <li> <a href="/Klean.html">KleanTube</a></li>
+
+                                        </ul>
+                                    </li>
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                                    class="fa fa-angle-down drop-icon"
+                                                    aria-hidden="true"></i></span></a>
+                                        <ul>
+                                            <li> <a href="/handy.html">Handy Standy UV</a></li>
+                                            <li> <a href="/safe.html">UR-Safe Solutions</a></li>
+                                            <li> <a href="/wellsafeapp.html">Well SafeTech App Solutions</a></li>
+                                        </ul>
+
+                                    </li>
+
+                                </ul>
+                            </li>
+                            <li> <a href="#">Airlens Products&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                            aria-hidden="true"></i></span></a>
+                                <ul>
+                                    <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
+                                    <li> <a href="/airlensmask.html">Airlens N99 level mask</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
             <li>
                 <a href="#">Solutions &nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
@@ -92,68 +180,7 @@
                         </ul>
                     </li>
 
-                    <li>
-                        <a href="#">Health Care &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
-                                    aria-hidden="true"></i></span></a>
-
-                        <ul>
-                            <li> <a href="/xray.html">X-Ray Machines</a></li>
-                            <li> <a href="/medical.html">Medical Equipments and ECP Machines</a></li>
-                            <li> <a href="/sono.html">Sonography Machines</a></li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="#"> Covid 19 &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
-                                    aria-hidden="true"></i></span></a>
-
-                        <ul>
-                            <li> <a href="/pcr.html">Patho_Detect RT-PCR Test</a></li>
-                            <li> <a href="/antigen.html">Patho_Catch Antigen Test</a></li>
-                            <li> <a href="/compact.html">COMPACT XL</a></li>
-                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
-                                            aria-hidden="true"></i></span></a>
-                                <ul>
-                                    <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
-                                    <li> <a href="/AA1.html">AA+ Covid 19 testing Solution</a></li>
-
-                                </ul>
-                            </li>
-                            <li> <a href="#">Covid Solutions&nbsp;<span><i
-                                            class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
-                                <ul>
-                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;<span><i
-                                                    class="fa fa-angle-down drop-icon"
-                                                    aria-hidden="true"></i></span></a>
-                                        <ul>
-                                            <li> <a href="/self.html">Self Check</a></li>
-                                            <li> <a href="/Klean.html">KleanTube</a></li>
-
-                                        </ul>
-                                    </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
-                                                    class="fa fa-angle-down drop-icon"
-                                                    aria-hidden="true"></i></span></a>
-                                        <ul>
-                                            <li> <a href="/handy.html">Handy Standy UV</a></li>
-                                            <li> <a href="/safe.html">UR-Safe Solutions</a></li>
-                                            <li> <a href="/wellsafeapp.html">Well SafeTech App Solutions</a></li>
-                                        </ul>
-
-                                    </li>
-
-                                </ul>
-                            </li>
-                            <li> <a href="#">Airlens Products&nbsp;<span><i class="fa fa-angle-down drop-icon"
-                                            aria-hidden="true"></i></span></a>
-                                <ul>
-                                    <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
-                                    <li> <a href="/airlensmask.html">Airlens N99 level mask</a></li>
-
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+                    
                     
                     <li>
                         <a href="#">Telephony and Unified Communication<span><i
