--- a/xray.html
+++ b/xray.html
@@ -180,7 +180,7 @@
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>X-Ray Equipments</h1>
+                        <h1>Allans Medical Systems</h1>
 
                     </div>
                 </div>
