--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
-                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
@@ -130,7 +130,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i
                                             class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
