--- a/Axray1.html
+++ b/Axray1.html
@@ -255,6 +255,9 @@
                                     PDF</strong></a>
               </p> 
         </div>
+         <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
+
     </div>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
