--- a/Axray1.html
+++ b/Axray1.html
@@ -235,7 +235,7 @@
                     <li> Clear Visual Digital display for voltage compensation.</li>
                     <li> Automatic bucky selection</li>
                     <li> Audio visual indication incase of tube overload.no x-ray exposure possible </li>
-                    <li> Unique standby mode.In case of any component failure in eletronic circuitry,the equipment can be switched to standby mode to make it operational.
+                    <li> Unique standby mode.In case of any component failure in eletronic circuitry,the equipment can be switched to standby mode to make it operational.</li>
                 </ul>
            
            
