--- a/Axray2.html
+++ b/Axray2.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-   <link rel="stylesheet" href="style1.css">
+   <link rel="stylesheet" href="css/style1.css">
 
 
-    <title>THE STELLAR|Health_Care|Adonis|X-Ray Machines|100ma </title>
+    <title>THE STELLAR|Health_Care|Adonis|X-Ray Machines|300ma/500ma/800ma </title>
 </head>
 
 <body>
