--- a/Axray2.html
+++ b/Axray2.html
@@ -209,7 +209,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img  width="1600" height="700" src="images\images4\ado.png" alt="Responsive image"
+                <img  width="1600" height="700" src="images4\ado.png" alt="Responsive image"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -244,16 +244,16 @@
             
         </div>
         <div class="col-md-5">
-            <img  width="300" height="300" src="images\images4/100ma1.jpg"
+            <img  width="300" height="300" src="images4/100ma1.jpg"
                 class="img-fluid" alt="Responsive image">
             <p><strong> Technical data of 100ma X-Ray Machines </strong><p><strong> Page1 </strong> <a href="pdf/Page 1.pdf"
-                    target="_blank" class="btn btn-small" href="#"><img src="images/images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                    target="_blank" class="btn btn-small" href="#"><img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                         PDF</strong></a><p><strong> Page2 </strong> <a href="pdf/Page 2.pdf"
-                        target="_blank" class="btn btn-small" href="#"><img src="images/images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        target="_blank" class="btn btn-small" href="#"><img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a><p><strong> Page3 </strong> <a href="pdf/Page 3.pdf"
-                            target="_blank" class="btn btn-small" href="#"><img src="images/images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                            target="_blank" class="btn btn-small" href="#"><img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                 PDF</strong></a>  <p><strong> Page4 </strong><a href="pdf/Page 4.pdf"
-                                target="_blank" class="btn btn-small" href="#"><img src="images/images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                target="_blank" class="btn btn-small" href="#"><img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                                     PDF</strong></a>
               </p> 
         </div>
