--- a/Axray2.html
+++ b/Axray2.html
@@ -240,7 +240,7 @@
                     <li> Microprocesser based overload protection for Longer Tube life with audible and visual indication.</li>
                 </ul>
            
-            <p><strong> Varients:300ma/500ma/800ma </strong>
+            <p><strong> Varients:300ma/500ma/800ma </strong></p>
                 <br>
                 
             <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
