--- a/mobile.html
+++ b/mobile.html
@@ -228,7 +228,7 @@
         <div class="col-md-5 gx-5 mb-4 ">
             <h3 class="featurette-heading"><strong> Adonis X_Ray Systems</strong> </h3>
             <div class="clearfix"></div><br>
-            <h4 class="featurette-heading"><strong> C-Arm with 1K x 1K Imaging Chain </strong> </h4>
+            <h4 class="featurette-heading"><strong> C-Arm with 1K x 1K Mobile Surgical </strong> </h4>
             <p>
                 ADONIS High Frequency C-Arm with 1K x 1K Imaging Chain is a Reliable and Advanced choice 
                 to perform high end surgerues in the field of Orthopaedics,Urology,Neurology,Gastro etc.
