--- a/mobile.html
+++ b/mobile.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css\style1.css">
 
 
-    <title>THE STELLAR|Health_Care|Adonis|C-Arm Machines|C-Arm with 1K x 1K Imaging Chain </title>
+    <title>THE STELLAR|Health_Care|Adonis|C-Arm Machines|C-Arm with Mobile Surgical </title>
 </head>
 
 <body>
@@ -233,7 +233,7 @@
                 ADONIS High Frequency C-Arm with 1K x 1K Imaging Chain is a Reliable and Advanced choice 
                 to perform high end surgerues in the field of Orthopaedics,Urology,Neurology,Gastro etc.
             </p>
-            <p><strong>Key Features.</strong></p>
+            <p><strong>Ergonomically designed LCD Control Panel with user friendly functions Features.</strong></p>
             <ul style="font-size:15px">
                 <li> Digital Display of KVp, mAs, mA and Timer.</li>
                 <li> Tube Head temperature display on control panel.</li>
