--- a/frequency.html
+++ b/frequency.html
@@ -233,7 +233,7 @@
                 ADONIS Mobile C-Arms are used for X-Ray guidance during procedures in Orthopaedics,Urology,Neurology,Cardiology etc.
                 for faster and more accurate evaluations of surgical parameters.
             </p>
-            <p><strong>Key Features.</strong></p>
+            <p><strong>Ergonomically designed LCD Control Panel with user friendly functions Features.</strong></p>
             <ul style="font-size:15px">
                 <li> Digital Display of KVp, mAs, mA and Timer || Zoom, Error interlock display on LCD .</li>
                 <li> Real time Tube Head temperature display.</li>
@@ -247,7 +247,7 @@
         </div>
         <div class="col-md-5">
             <img width="300" height="300" src="images4/high-frequency-surgical-c-arm-machine-500x500.png" class="img-fluid" alt="Responsive image">
-            <p><strong> Technical data of 100ma X-Ray Machines </strong>
+           
             <p><strong> Page1 </strong> <a href="pdf/frequency1.pdf " target="_blank" class="btn btn-small" href="#"><img
                         src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                         PDF</strong></a>
