--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <li> <a href="#">C_Arm_Machines&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
-                                    <li> <a href="/surgical.html">Mobile_surgical</a></li>
+                                    <li> <a href="/mobile.html">Mobile_surgical</a></li>
                                     <li> <a href="/frequency.html">High_Frequency</a></li>
                                     <li> <a href="/anode.html">Rotating_Anode</a></li>
                                 </ul>
