--- a/frequency.html
+++ b/frequency.html
@@ -243,6 +243,8 @@
                 <li> Emergency Fluoro option.</li>
                     
             </ul>
+             <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
           
         </div>
         <div class="col-md-5">
