--- a/mobile.html
+++ b/mobile.html
@@ -241,7 +241,8 @@
                 <li> Counter balanced mechanical with foot brakes half turn locks for all movements.</li>
                     
             </ul>
-          
+           <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
         </div>
         <div class="col-md-5">
             <img width="150" height="150" src="images4/high c-arm.jpeg" class="img-fluid" alt="Responsive image">
