--- a/mobile.html
+++ b/mobile.html
@@ -212,7 +212,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img width="1600" height="700" src="images4/c-arm-m.jpeg" alt="Responsive image" class="img-fluid">
+                <img width="1600" height="700" src="images4/high c-arm.jpeg" alt="Responsive image" class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h1 class="text-primary">Adonis Medical Systems</h1>
@@ -245,7 +245,7 @@
            </a>
         </div>
         <div class="col-md-5">
-            <img width="150" height="150" src="images4/high c-arm.jpeg" class="img-fluid" alt="Responsive image">
+            <img width="150" height="150" src="images4/c-arm-m.jpeg" class="img-fluid" alt="Responsive image">
            
             <p><strong> Page1 </strong> <a href="pdf/c-arm1.pdf " target="_blank" class="btn btn-small" href="#"><img
                         src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
