--- a/mobile.html
+++ b/mobile.html
@@ -116,7 +116,7 @@
                                 </ul>
 
                             </li>
-                            <li> <a href="/flat.html">>Flat_Panel_Digital_xray</a></li>
+                            <li> <a href="/flat.html">Flat_Panel_Digital_xray</a></li>
 
                         </ul>
                     </li>
