--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 </ul>
 
                             </li>
-                            <li> <a href="/flat.html">>Flat_Panel_Digital_xray</a></li>
+                            <li> <a href="/flat.html">Flat_Panel_Digital_xray</a></li>
 
                         </ul>
                     </li>
